# vegas

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  conanfile.txt  main.cc
analyzers/: vegas-analyzer-heisenberg.py  vegas-analyzer-lite.py  vegas-analyzer-xyz.py
cmake/Modules/: Findjsoncpp_FOUND.cmake
code/: main.cc
code/include/: atom.h  config.h  lattice.h  params.h  reporter.h  starter.h  system.h
code/src/: atom.cc  lattice.cc  reporter.cc  system.cc
compilers/linux/: CMakeLists.txt
compilers/linux/cmake/Modules/: Findjsoncpp.cmake
compilers/windows/: makefile
examples/build samples/: bulk.py
examples/some kind of simulations/training effect/: make_the_json.py
examples/some kind of simulations/training effect/simulations/: bulk_L_8_0.json
executables/linux64/: vegas
executables/vegas-linux64/: makefile
executables/vegas-win64/: makefile  vegas.iss
include/: atom.h  lattice.h  params.h  reporter.h  rlutil.h  starter.h  system.h
src/: atom.cc  lattice.cc  main.cc  reporter.cc  starter.cc  system.cc
vegas/: CMakeLists.txt  main.cc
vegas-HDF5-version/: CMakeLists.txt  main.cc  makefile
vegas-HDF5-version/include/: atom.h  lattice.h  params.h  system.h
vegas-HDF5-version/src/: atom.cc  atom.h  lattice.cc  main.cc  params.h  reporter.h  system.cc  system.h
vegas-HDF5-version/src/serial/: H5pubconf.h  h5_dble_interface.mod  h5a.mod  h5a_provisional.mod  h5d.mod  h5d_provisional.mod  h5ds.mod  h5e.mod  h5e_provisional.mod  h5f.mod  h5f_provisional.mod  h5fortran_types.mod  h5g.mod  h5global.mod  h5i.mod  h5im.mod  h5l.mod  h5l_provisional.mod  h5lib.mod  h5lib_provisional.mod  h5lt.mod  h5o.mod  h5o_provisional.mod  h5p.mod  h5p_provisional.mod  h5r.mod  h5r_provisional.mod  h5s.mod  h5t.mod  h5t_provisional.mod  h5tb.mod  h5test_kind_storage_size_mod.mod  h5z.mod  hdf5.mod
vegas-outliner/: vegas-outliner.py
vegas-samples/: Cango3D-7v10.js  index.html
vegas-tools/: vegas-analyzer-heisenberg.py
vegas/CMake/: FindHDF5.cmake  Findjsoncpp.cmake
vegas/include/: atom.h  system.h
